fix welcomePopup overflow on small screens

--- a/public/main.css
+++ b/public/main.css
@@ -405,6 +405,7 @@ footer {
 
 .welcomeText {
     display: none;
+    margin-bottom: 24px;
 }
 
 @keyframes working {
